[gd_scene load_steps=6 format=2]

[ext_resource path="res://InventoryLogic/Slot.gd" type="Script" id=1]
[ext_resource path="res://World/Player/Player/UserInterface/Hotbar/Hotbar.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/Inventory UI/hotbar.png" type="Texture" id=3]
[ext_resource path="res://InventoryLogic/ItemDescription.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Themes/options.tres" type="Theme" id=5]

[node name="Hotbar" type="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Bg" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -615.0
margin_top = -153.0
margin_right = -9.0
margin_bottom = -60.0
rect_scale = Vector2( 1.5, 1.5 )
mouse_filter = 0
texture = ExtResource( 3 )
stretch_mode = 5

[node name="ItemDescription" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( -512, -596 )

[node name="HotbarSlots" type="GridContainer" parent="."]
margin_left = -580.0
margin_top = -121.0
margin_right = 539.0
margin_bottom = -55.0
custom_constants/hseparation = 3
columns = 10

[node name="Slot1" type="Panel" parent="HotbarSlots"]
margin_right = 81.0
margin_bottom = 81.0
rect_min_size = Vector2( 81, 81 )
script = ExtResource( 1 )

[node name="Slot2" type="Panel" parent="HotbarSlots"]
margin_left = 84.0
margin_right = 165.0
margin_bottom = 81.0
rect_min_size = Vector2( 81, 81 )
script = ExtResource( 1 )

[node name="Slot3" type="Panel" parent="HotbarSlots"]
margin_left = 168.0
margin_right = 249.0
margin_bottom = 81.0
rect_min_size = Vector2( 81, 81 )
script = ExtResource( 1 )

[node name="Slot4" type="Panel" parent="HotbarSlots"]
margin_left = 252.0
margin_right = 333.0
margin_bottom = 81.0
rect_min_size = Vector2( 81, 81 )
script = ExtResource( 1 )

[node name="Slot5" type="Panel" parent="HotbarSlots"]
margin_left = 336.0
margin_right = 417.0
margin_bottom = 81.0
rect_min_size = Vector2( 81, 81 )
script = ExtResource( 1 )

[node name="Slot6" type="Panel" parent="HotbarSlots"]
margin_left = 420.0
margin_right = 501.0
margin_bottom = 81.0
rect_min_size = Vector2( 81, 81 )
script = ExtResource( 1 )

[node name="Slot7" type="Panel" parent="HotbarSlots"]
margin_left = 504.0
margin_right = 585.0
margin_bottom = 81.0
rect_min_size = Vector2( 81, 81 )
script = ExtResource( 1 )

[node name="Slot8" type="Panel" parent="HotbarSlots"]
margin_left = 588.0
margin_right = 669.0
margin_bottom = 81.0
rect_min_size = Vector2( 81, 81 )
script = ExtResource( 1 )

[node name="Slot9" type="Panel" parent="HotbarSlots"]
margin_left = 672.0
margin_right = 753.0
margin_bottom = 81.0
rect_min_size = Vector2( 81, 81 )
script = ExtResource( 1 )

[node name="Slot10" type="Panel" parent="HotbarSlots"]
show_behind_parent = true
margin_left = 756.0
margin_right = 837.0
margin_bottom = 81.0
rect_min_size = Vector2( 81, 81 )
script = ExtResource( 1 )

[node name="SoundEffects" type="AudioStreamPlayer" parent="."]

[node name="HotbarLabels" type="HBoxContainer" parent="."]
visible = false
margin_left = -416.0
margin_top = -109.0
margin_right = 2179.0
margin_bottom = -48.0
rect_scale = Vector2( 0.3, 0.3 )
mouse_filter = 2
custom_constants/separation = 254

[node name="1" type="Label" parent="HotbarLabels"]
margin_right = 19.0
margin_bottom = 61.0
theme = ExtResource( 5 )
text = "1"

[node name="2" type="Label" parent="HotbarLabels"]
margin_left = 273.0
margin_right = 300.0
margin_bottom = 61.0
theme = ExtResource( 5 )
text = "2"

[node name="3" type="Label" parent="HotbarLabels"]
margin_left = 554.0
margin_right = 581.0
margin_bottom = 61.0
theme = ExtResource( 5 )
text = "3"

[node name="4" type="Label" parent="HotbarLabels"]
margin_left = 835.0
margin_right = 858.0
margin_bottom = 61.0
theme = ExtResource( 5 )
text = "4"

[node name="5" type="Label" parent="HotbarLabels"]
margin_left = 1112.0
margin_right = 1139.0
margin_bottom = 61.0
theme = ExtResource( 5 )
text = "5"

[node name="6" type="Label" parent="HotbarLabels"]
margin_left = 1393.0
margin_right = 1420.0
margin_bottom = 61.0
theme = ExtResource( 5 )
text = "6"

[node name="7" type="Label" parent="HotbarLabels"]
margin_left = 1674.0
margin_right = 1699.0
margin_bottom = 61.0
theme = ExtResource( 5 )
text = "7"

[node name="8" type="Label" parent="HotbarLabels"]
margin_left = 1953.0
margin_right = 1980.0
margin_bottom = 61.0
theme = ExtResource( 5 )
text = "8"

[node name="9" type="Label" parent="HotbarLabels"]
margin_left = 2234.0
margin_right = 2260.0
margin_bottom = 61.0
theme = ExtResource( 5 )
text = "9"

[node name="0" type="Label" parent="HotbarLabels"]
margin_left = 2514.0
margin_right = 2541.0
margin_bottom = 61.0
theme = ExtResource( 5 )
text = "0"
